--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "paths": {
+      "@types/*": ["src/types/*"]
+    }
   }
 }
